--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -1451,71 +1451,80 @@ form.dashboard-grid-widget-item .field-group-change-indicator .input-color-picke
 form.dashboard-grid-widget-item .table-forms .table-forms-td-left label.widget-item-label {
   margin-top: 6px; }
 
-div.dashboard-grid-widget-item {
+a.dashboard-grid-widget-item {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   height: 100%;
   padding: 10px;
-  overflow-x: hidden; }
-  div.dashboard-grid-widget-item > div {
+  overflow-x: hidden;
+  color: inherit; }
+  a.dashboard-grid-widget-item:focus, a.dashboard-grid-widget-item:hover, a.dashboard-grid-widget-item:visited {
+    border: none; }
+  a.dashboard-grid-widget-item > div {
     display: flex;
     flex: 1 1 calc(100% / 3); }
-  div.dashboard-grid-widget-item .item-description,
-  div.dashboard-grid-widget-item .item-value,
-  div.dashboard-grid-widget-item .item-time {
+  a.dashboard-grid-widget-item .item-description,
+  a.dashboard-grid-widget-item .item-value,
+  a.dashboard-grid-widget-item .item-time {
     flex: 1 1 auto; }
-  div.dashboard-grid-widget-item .item-value {
+  a.dashboard-grid-widget-item .item-value {
     display: flex;
     flex-wrap: wrap;
+    margin: 0 5px;
     min-width: 0; }
-    div.dashboard-grid-widget-item .item-value > .units:first-child, div.dashboard-grid-widget-item .item-value > .units:last-child {
+    a.dashboard-grid-widget-item .item-value > .units:first-child, a.dashboard-grid-widget-item .item-value > .units:last-child {
       flex: 0 0 100%; }
-    div.dashboard-grid-widget-item .item-value > .units:first-child {
+    a.dashboard-grid-widget-item .item-value > .units:first-child {
       margin-bottom: -0.07em; }
-    div.dashboard-grid-widget-item .item-value > .units:last-child {
+    a.dashboard-grid-widget-item .item-value > .units:last-child {
       margin-top: -0.07em; }
-    div.dashboard-grid-widget-item .item-value .item-value-content {
-      display: flex;
-      align-items: baseline;
-      min-width: 0; }
-    div.dashboard-grid-widget-item .item-value .item-value-no-data {
-      color: #737373; }
-  div.dashboard-grid-widget-item .left {
+  a.dashboard-grid-widget-item .item-value-content {
+    display: flex;
+    align-items: baseline;
+    overflow: hidden;
+    min-width: 0; }
+  a.dashboard-grid-widget-item .item-value-no-data {
+    color: #737373; }
+  a.dashboard-grid-widget-item .left {
     justify-content: flex-start;
     max-width: max-content;
     margin-right: auto; }
-  div.dashboard-grid-widget-item .center {
+  a.dashboard-grid-widget-item .center {
     justify-content: center; }
-  div.dashboard-grid-widget-item .right {
+  a.dashboard-grid-widget-item .right {
     justify-content: flex-end;
     max-width: max-content;
     margin-left: auto; }
-  div.dashboard-grid-widget-item .top {
+  a.dashboard-grid-widget-item .top {
     align-self: flex-start; }
-  div.dashboard-grid-widget-item .middle {
+  a.dashboard-grid-widget-item .middle {
     align-self: center; }
-  div.dashboard-grid-widget-item .bottom {
+  a.dashboard-grid-widget-item .bottom {
     align-self: flex-end; }
-  div.dashboard-grid-widget-item .bold {
+  a.dashboard-grid-widget-item .bold {
     font-weight: bold; }
-  div.dashboard-grid-widget-item .item-description,
-  div.dashboard-grid-widget-item .item-time,
-  div.dashboard-grid-widget-item .value,
-  div.dashboard-grid-widget-item .units {
+  a.dashboard-grid-widget-item .item-description,
+  a.dashboard-grid-widget-item .item-time,
+  a.dashboard-grid-widget-item .value {
     display: block;
-    min-width: .6em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; }
-  div.dashboard-grid-widget-item .item-description,
-  div.dashboard-grid-widget-item .value,
-  div.dashboard-grid-widget-item .decimals,
-  div.dashboard-grid-widget-item .units,
-  div.dashboard-grid-widget-item .item-time {
+    a.dashboard-grid-widget-item .item-description::after,
+    a.dashboard-grid-widget-item .item-time::after,
+    a.dashboard-grid-widget-item .value::after {
+      content: '';
+      display: inline-block;
+      min-width: 1ch; }
+  a.dashboard-grid-widget-item .item-description,
+  a.dashboard-grid-widget-item .value,
+  a.dashboard-grid-widget-item .decimals,
+  a.dashboard-grid-widget-item .units,
+  a.dashboard-grid-widget-item .item-time {
     font-size: calc(var(--content-height) * var(--widget-item-font) / 1.14);
     line-height: 1.14; }
-  div.dashboard-grid-widget-item .svg-arrow {
+  a.dashboard-grid-widget-item .svg-arrow {
     height: calc(var(--content-height) * var(--widget-item-font) * 0.72 / 1.14);
     margin-left: .3em; }
 
